--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
     flutter_session: ^0.1.1
     http: ^0.12.2
     modal_progress_hud: ^0.1.3
+    provider: ^5.0.0
 
 dev_dependencies:
     flutter_test:
